--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,11 @@ nav {
 .nav-toggle-label {
   display: none;
 }
+#logo {
+  font-size: 280%;
+  line-height: 75px;
+  margin: 0 0 5rem;
+}
 }
 
 
