--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ main {
     flex: 1 0 auto;
     margin-top: 47px;
 }
-/* hero section */
+/* Hero section */
 #hero {
     height: 600px;
     width: 100%;
@@ -99,7 +99,7 @@ main {
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
 
-    background-color: rgba (241, 109, 107, .7)
+    background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -111,6 +111,32 @@ main {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+
+/* Reasons Section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+#benefits-physical>div,
+#benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
