Add circular image to reasons section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,10 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -48,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -83,11 +86,12 @@ nav {
 
 /* Main content */
 main {
-    
+
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
+
 /* Hero section */
 #hero {
     height: 600px;
@@ -108,7 +112,9 @@ main {
     padding-top: 40px;
     padding-left: 10px;
 }
-#cover-text > h2, #cover-text > h3 {
+
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -117,11 +123,13 @@ main {
     width: 90%;
     margin: 20px auto;
 }
+
 #reasons h2 {
     margin-bottom: 20px;
     text-align: center;
     font-size: 280%;
 }
+
 #benefits-physical>div,
 #benefits-mental>div {
     line-height: 20px;
@@ -135,6 +143,23 @@ main {
 hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
+}
+
+#circle-cover-bg {
+    background: url("../images/reasons-image.webp") no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+   /* Makes the square image into a cirlce */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
@@ -154,6 +179,7 @@ hr {
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -167,7 +193,7 @@ hr {
         display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -186,6 +212,7 @@ hr {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
+
     /* Hero*/
     #cover-text {
         width: 300px;
@@ -195,7 +222,7 @@ hr {
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
