--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ main {
     padding: 0 20px;
 }
 
-hr {
+#benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
@@ -150,7 +150,7 @@ hr {
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
-    /* Makes the square image into a cirlce */
+    /* Makes the square image into a circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
@@ -213,7 +213,7 @@ hr {
         margin-top: 79px;
     }
 
-    /* Hero*/
+    /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
@@ -245,7 +245,7 @@ hr {
     }
 }
 
-@media screen and (mind-width: 1200px) {
+@media screen and (min-width: 1200px) {
 
     /* reasons section */
     #benefits {
@@ -253,7 +253,7 @@ hr {
         flex-direction: row;
     }
 
-    #benefits>div {
+    #benefits > div {
         flex: 1;
     }
 
@@ -265,11 +265,11 @@ hr {
         order: 1;
     }
 
-    #benefits-mental>div {
+    #benefits-mental > div {
         align-self: flex-start;
     }
 
-    #benefits-physical>div {
+    #benefits-physical > div {
         align-self: flex-end;
     }
 }
