--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,30 @@ main {
     justify-content: center;
 }
 
+/* Meetup times section */
+#times {
+    background: url("../images/dublin-city.webp") no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    text-align: center;
+   /* This will not wrap on screens of less than 400px wide. Each div will expand to fill the available space on its row */
+    flex-grow: 1;
+    flex-basis: 200px;
+    /* Create a gird of meet up times over the bakcground image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading colour set in general styles*/
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
