Increase gallery columns for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,14 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -226,6 +234,9 @@ main {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
+
+        /* Gallery */
+        column-count: 3;
     }
 
     #menu {
@@ -281,6 +292,11 @@ main {
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 }
 
